objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Low Stock</fullName>
                </value>
                <value>
                    <fullName>Sufficient Stock</fullName>
                </value>
                <value>
                    <fullName>Extra Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <label>Manufacturing Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Assigned__c</fullName>
        <label>Quantity Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_On_Hand__c</fullName>
        <label>Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_Status__c</columns>
        <columns>Manufacturing_Site__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Quantity_Allocated__c</columns>
        <columns>Quantity_Assigned__c</columns>
        <columns>Quantity_Available__c</columns>
        <columns>Quantity_On_Hand__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Unit_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inventory</fullName>
        <columns>Product_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Manufacturing_Site__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Quantity_Allocated__c</columns>
        <columns>Quantity_Assigned__c</columns>
        <columns>Quantity_Available__c</columns>
        <columns>Quantity_On_Hand__c</columns>
        <columns>Inventory_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manufacturing_Site__c</field>
            <operation>contains</operation>
            <value>Los Angeles</value>
        </filters>
        <label>Inventory</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>